; ModuleID = '/home/carl/AnghaBench/zfs/module/zfs/extr_dmu_objset.c_dmu_objset_find.c'
source_filename = "/home/carl/AnghaBench/zfs/module/zfs/extr_dmu_objset.c_dmu_objset_find.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@FTAG = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @dmu_objset_find(i8* %0, i32 (i8*, i8*)* %1, i8* %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i32 (i8*, i8*)*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32*, align 8
  %11 = alloca i32, align 4
  store i8* %0, i8** %6, align 8
  store i32 (i8*, i8*)* %1, i32 (i8*, i8*)** %7, align 8
  store i8* %2, i8** %8, align 8
  store i32 %3, i32* %9, align 4
  %12 = load i8*, i8** %6, align 8
  %13 = load i32, i32* @FTAG, align 4
  %14 = call i32 @spa_open(i8* %12, i32** %10, i32 %13)
  store i32 %14, i32* %11, align 4
  %15 = load i32, i32* %11, align 4
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %17, label %19

17:                                               ; preds = %4
  %18 = load i32, i32* %11, align 4
  store i32 %18, i32* %5, align 4
  br label %30

19:                                               ; preds = %4
  %20 = load i32*, i32** %10, align 8
  %21 = load i8*, i8** %6, align 8
  %22 = load i32 (i8*, i8*)*, i32 (i8*, i8*)** %7, align 8
  %23 = load i8*, i8** %8, align 8
  %24 = load i32, i32* %9, align 4
  %25 = call i32 @dmu_objset_find_impl(i32* %20, i8* %21, i32 (i8*, i8*)* %22, i8* %23, i32 %24)
  store i32 %25, i32* %11, align 4
  %26 = load i32*, i32** %10, align 8
  %27 = load i32, i32* @FTAG, align 4
  %28 = call i32 @spa_close(i32* %26, i32 %27)
  %29 = load i32, i32* %11, align 4
  store i32 %29, i32* %5, align 4
  br label %30

30:                                               ; preds = %19, %17
  %31 = load i32, i32* %5, align 4
  ret i32 %31
}

declare dso_local i32 @spa_open(i8*, i32**, i32) #1

declare dso_local i32 @dmu_objset_find_impl(i32*, i8*, i32 (i8*, i8*)*, i8*, i32) #1

declare dso_local i32 @spa_close(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
